## Makefile.am -- Process this file with automake to produce Makefile.in
bin_PROGRAMS = papaya
papaya_SOURCES = main.c \
		 confreader.c \
		 clioptions.c \
		 pconfig.c \
		 playlist.c \
		 raw_at.c \
		 raw_vt.c \
		 raw_xt.c \
		 gsta_elems.c \
		 gstv_elems.c \
		 gstx_elems.c \
		 gstmisc_elems.c \
		 hma_bins_cb.c \
		 hmmisc_bins_cb.c \
		 hma_bins.c \
		 hmx_bins.c \
		 hmv_bins.c \
		 hmmisc_bins.c \
		 testsources.c \
		 streamer_cb.c \
		 streamer.c \
		 shell.c \
		 outputs.c \
		 sources.c \
		 psignals.c
papaya_LDADD = 
papaya_LDFLAGS =
